force-app/main/default/objects/Puppy_Mill_Inspection__c/Puppy_Mill_Inspection__c.object-meta.xml
<CustomObject>
    <label>Puppy Mill Inspection</label>
    <nameField>
        <displayFormat>INS-{00000}</displayFormat>
        <label>Inspection ID #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Puppy Mill Inspections</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>