force-app/main/default/objects/Puppy_Mill_Inspection__c/fields/Attempted_Inspection__c.field-meta.xml
<CustomField>
    <fullName>Attempted_Inspection__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Attempted Inspection</label>
    <type>Checkbox</type>
</CustomField>