force-app/main/default/objects/Puppy_Mill_Inspection__c/fields/Certificate_Number__c.field-meta.xml
<CustomField>
    <fullName>Certificate_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Certificate Number</label>
    <referenceTo>Puppy_Mill_Certificate__c</referenceTo>
    <relationshipLabel>Puppy Mill Inspections</relationshipLabel>
    <relationshipName>Puppy_Mill_Inspections</relationshipName>
    <type>Lookup</type>
</CustomField>