force-app/main/default/objects/Puppy_Mill_Inspection__c/fields/Inspection_Count__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Count__c</fullName>
    <label>Inspection Count</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>