force-app/main/default/objects/Puppy_Mill_Inspection__c/fields/Inspection_Year__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Year__c</fullName>
    <label>Inspection Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>