force-app/main/default/objects/Puppy_Mill_Inspection__c/fields/Number_of_Direct_Violations__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Direct_Violations__c</fullName>
    <label># of Direct Violations</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>