force-app/main/default/objects/Puppy_Mill_Inspection__c/fields/Photos_Included__c.field-meta.xml
<CustomField>
    <fullName>Photos_Included__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Photos Included</label>
    <type>Checkbox</type>
</CustomField>