force-app/main/default/objects/Puppy_Mill_Inspection__c/fields/Puppy_Mill_Agency__c.field-meta.xml
<CustomField>
    <fullName>Puppy_Mill_Agency__c</fullName>
    <label>Puppy Mill Agency</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Puppy Mill Inspections</relationshipLabel>
    <relationshipName>Puppy_Mill_Inspections</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>