force-app/main/default/objects/Puppy_Mill_Inspection__c/fields/Type_of_Inspection__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Inspection__c</fullName>
    <label>Type of Inspection</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Site</fullName>
            </value>
            <value>
                <fullName>Regular</fullName>
            </value>
            <value>
                <fullName>Repeat</fullName>
            </value>
            <value>
                <fullName>Re-license</fullName>
            </value>
            <value>
                <fullName>Focused</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>