force-app/main/default/objects/Puppy_Mill_Inspection__c/fields/Videos_Included__c.field-meta.xml
<CustomField>
    <fullName>Videos_Included__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Videos Included</label>
    <type>Checkbox</type>
</CustomField>